objects/Account_Support_Request__c/fields/Has_the_Customer_committed_to_a_POC__c.field-meta.xml
<CustomField>
    <fullName>Has_the_Customer_committed_to_a_POC__c</fullName>
    <description>Has the Customer committed to a POC?</description>
    <inlineHelpText>Has the Customer committed to a POC?</inlineHelpText>
    <label>Has the Customer committed to a POC?</label>
    <type>TextArea</type>
</CustomField>