objects/Account_Support_Request__c/fields/How_did_we_find_out_about_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>How_did_we_find_out_about_Opportunity__c</fullName>
    <description>How did we find out about Opportunity</description>
    <inlineHelpText>How did we find out about Opportunity</inlineHelpText>
    <label>How did we find out about Opportunity</label>
    <type>TextArea</type>
</CustomField>