objects/Account_Support_Request__c/fields/Identified_NonExec_Attendee_Count__c.field-meta.xml
<CustomField>
    <fullName>Identified_NonExec_Attendee_Count__c</fullName>
    <description>Count of Attendee record with Types Not Equal to ‘Other’ and &apos;Tanium Executive Requested&apos;.</description>
    <label>Identified NonExec Attendee Count</label>
    <summaryFilterItems>
        <field>ISR_Customer_Attendee__c.Attendee_Type__c</field>
        <operation>notEqual</operation>
        <value>Tanium Executive Requested</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ISR_Customer_Attendee__c.Attendee_Type__c</field>
        <operation>notEqual</operation>
        <value>Other</value>
    </summaryFilterItems>
    <summaryForeignKey>ISR_Customer_Attendee__c.Internal_Support_Request_ISR__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>