objects/Account_Support_Request__c/fields/Influence_Partner__c.field-meta.xml
<CustomField>
    <fullName>Influence_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner Account lookup</description>
    <inlineHelpText>Select Partner</inlineHelpText>
    <label>Influence Partner</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. Must be Partner Account</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Internal Support Requests (Influence Partner)</relationshipLabel>
    <relationshipName>Internal_Support_Requests_2</relationshipName>
    <type>Lookup</type>
</CustomField>