objects/Account_Support_Request__c/fields/Influence_Partner_activities__c.field-meta.xml
<CustomField>
    <fullName>Influence_Partner_activities__c</fullName>
    <inlineHelpText>Select all relevant options (multi-select). What activities has the Influence Partner committed to for this opportunity?</inlineHelpText>
    <label>Influence Partner activities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales - Intro to decision makers in target acct</fullName>
            </value>
            <value>
                <fullName>Sales - Position as part of integrated product/service/project</fullName>
            </value>
            <value>
                <fullName>Sales - Transact business: resell, managed services</fullName>
            </value>
            <value>
                <fullName>Sales - Provide critical endorsements to gain advantage</fullName>
            </value>
            <value>
                <fullName>Sales – POC Support/Lead</fullName>
            </value>
            <value>
                <fullName>Sales – Transact business: Resell</fullName>
            </value>
            <value>
                <fullName>Marketing - drive interest via events/programs/promos</fullName>
            </value>
            <value>
                <fullName>Marketing – Account Based Marketing/Investment</fullName>
            </value>
            <value>
                <fullName>Services - adopt/operationalize/expand use cases</fullName>
            </value>
            <value>
                <fullName>Services – Strategy &amp; Transformation</fullName>
            </value>
            <value>
                <fullName>Services – Security/Health Assessment</fullName>
            </value>
            <value>
                <fullName>Services – Technical Consulting/Integration</fullName>
            </value>
            <value>
                <fullName>Services – Outsourcing/Managed Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>