objects/Account_Support_Request__c/fields/Info_Sec_Team_Size__c.field-meta.xml
<CustomField>
    <fullName>Info_Sec_Team_Size__c</fullName>
    <inlineHelpText>Info Sec Team Size (FTEs)</inlineHelpText>
    <label>Info Sec Team Size</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>