objects/Account_Support_Request__c/fields/Initial_Into_Notes__c.field-meta.xml
<CustomField>
    <fullName>Initial_Into_Notes__c</fullName>
    <description>Initial Into Notes</description>
    <inlineHelpText>Account owner to add information once initial contact is made - ie. was it successful?</inlineHelpText>
    <label>Initial Intro Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>