objects/Account_Support_Request__c/fields/Install_Software_Hardware__c.field-meta.xml
<CustomField>
    <fullName>Install_Software_Hardware__c</fullName>
    <description>Do you plan to install any software or deliver any hardware (POC or otherwise) ?</description>
    <inlineHelpText>Do you plan to install any software or deliver any hardware (POC or otherwise) ?</inlineHelpText>
    <label>Install Software/Hardware</label>
    <type>TextArea</type>
</CustomField>