objects/Account_Support_Request__c/fields/Integrations_with_Microsoft_or_ServiceNo__c.field-meta.xml
<CustomField>
    <fullName>Integrations_with_Microsoft_or_ServiceNo__c</fullName>
    <description>Indicates whether the customer has integrations with Microsoft or ServiceNow.  SS-13320</description>
    <inlineHelpText>Select the applicable integration.</inlineHelpText>
    <label>Integrations with Microsoft or ServiceNo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>ServiceNow</fullName>
            </value>
            <value>
                <fullName>Microsoft/ServiceNow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>