objects/Account_Support_Request__c/fields/Is_additional_training_needed__c.field-meta.xml
<CustomField>
    <fullName>Is_additional_training_needed__c</fullName>
    <description>Is additional training needed?</description>
    <inlineHelpText>Is additional training needed?</inlineHelpText>
    <label>Is additional training needed?</label>
    <type>TextArea</type>
</CustomField>