objects/Account_Support_Request__c/fields/ISR_Age__c.field-meta.xml
<CustomField>
    <fullName>ISR_Age__c</fullName>
    <description>TODAY - Created Date</description>
    <formula>Today() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>TODAY - Created Date</inlineHelpText>
    <label>ISR Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>