objects/Account_Support_Request__c/fields/ISR_Date_of_Submission__c.field-meta.xml
<CustomField>
    <fullName>ISR_Date_of_Submission__c</fullName>
    <label>ISR Date of Submission</label>
    <type>Date</type>
</CustomField>