objects/Account_Support_Request__c/fields/ISR_Owner_CIO_Strategist__c.field-meta.xml
<CustomField>
    <fullName>ISR_Owner_CIO_Strategist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>06.16.25: SS-10823 - updated filter to Vertical CIO Team members. Stakeholder: Laura N. and Erik Gaton
Below is previous requirement...
If support request = Access (CIO) and Vertical = SLED, route to Chris Cruz,
If support request = Access (CIO) and Vertical = Healthcare, route to Sanjay Joshi,
If support request = Relevance (Strategist) and Vertical = Financial Services route to Tim Morris,
If support request = Relevance (Strategist) and Vertical =SLED route to Gary Buonacorsi,
If support request = Relevance (Strategist) and Vertical = Manufacturing route to Ashley McGlone, else route to pool.</description>
    <inlineHelpText>You must select a user who is a member of the Global Executive Engagement department.</inlineHelpText>
    <label>ISR Owner (CIO/Strategist)</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6</booleanFilter>
        <errorMessage>You must select a user who is a member of the Vertical CIO/Strategist Team.</errorMessage>
        <filterItems>
            <field>User.Full_Name__c</field>
            <operation>equals</operation>
            <value>Erik Gaston</value>
        </filterItems>
        <filterItems>
            <field>User.Full_Name__c</field>
            <operation>equals</operation>
            <value>Tim Morris</value>
        </filterItems>
        <filterItems>
            <field>User.Full_Name__c</field>
            <operation>equals</operation>
            <value>Claire Bailey</value>
        </filterItems>
        <filterItems>
            <field>User.Full_Name__c</field>
            <operation>equals</operation>
            <value>Torry Crass</value>
        </filterItems>
        <filterItems>
            <field>User.Full_Name__c</field>
            <operation>equals</operation>
            <value>Zac Warren</value>
        </filterItems>
        <filterItems>
            <field>User.Full_Name__c</field>
            <operation>equals</operation>
            <value>Dan Jones</value>
        </filterItems>
        <infoMessage>You must select a user who is a member of the Vertical CIO/Strategist Team.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Internal_Support_RequestsY8pq</relationshipName>
    <type>Lookup</type>
</CustomField>