objects/Account_Support_Request__c/fields/ISR_Resources_Rolled_up__c.field-meta.xml
<CustomField>
    <fullName>ISR_Resources_Rolled_up__c</fullName>
    <description>Field Used to roll up Active ESO Resources from ISRR to Account.
Used in DLRS &quot;Active ESO Resources&quot; 
Also used in DLRS to rollup Active ESO Resources on Account &quot;Active ESO Resources on Account&quot;.</description>
    <label>ISR Resources</label>
    <length>255</length>
    <type>Text</type>
</CustomField>