objects/Account_Support_Request__c/fields/IT_Ops_Team_Size__c.field-meta.xml
<CustomField>
    <fullName>IT_Ops_Team_Size__c</fullName>
    <inlineHelpText>IT Ops Team Size (FTEs)</inlineHelpText>
    <label>IT Ops Team Size</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>