objects/Account_Support_Request__c/fields/Key_decision_making_contacts__c.field-meta.xml
<CustomField>
    <fullName>Key_decision_making_contacts__c</fullName>
    <inlineHelpText>Provide the key decision making contacts (name and title) of the Influence Partner for this opportunity</inlineHelpText>
    <label>Key decision-making contacts</label>
    <length>250</length>
    <type>Text</type>
</CustomField>