objects/Account_Support_Request__c/fields/Key_Tanium_Asks__c.field-meta.xml
<CustomField>
    <fullName>Key_Tanium_Asks__c</fullName>
    <label>Key Tanium Asks Summary</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>