objects/Account_Support_Request__c/fields/Kimble_Proposal_Created__c.field-meta.xml
<CustomField>
    <fullName>Kimble_Proposal_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://tanium.atlassian.net/browse/SS-288</description>
    <label>Kimble Proposal Created</label>
    <type>Checkbox</type>
</CustomField>