objects/Account_Support_Request__c/fields/Last_EBR_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_EBR_Date__c</fullName>
    <label>Last EBR Date</label>
    <type>Date</type>
</CustomField>