objects/Account_Support_Request__c/fields/Last_Sales_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Update_Date__c</fullName>
    <label>Last Sales Update Date</label>
    <type>Date</type>
</CustomField>