objects/Account_Support_Request__c/fields/Main_Stakeholder_City_State__c.field-meta.xml
<CustomField>
    <fullName>Main_Stakeholder_City_State__c</fullName>
    <description>Where are the main offices of the key stakeholders. This helps CSM allocation</description>
    <inlineHelpText>To help with CSM allocation, list the City/State of the main office where the primary operating team is located and where the CSM will need to be located.</inlineHelpText>
    <label>CSM Location</label>
    <type>TextArea</type>
</CustomField>