objects/Account_Support_Request__c/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Set Up a Call</fullName>
            </value>
            <value>
                <fullName>Set Up a Meeting</fullName>
            </value>
            <value>
                <fullName>In Person Meeting</fullName>
            </value>
            <value>
                <fullName>Email Customer</fullName>
            </value>
            <value>
                <fullName>Email Prospect</fullName>
            </value>
            <value>
                <fullName>OCISO Door Opener Email/LinkedIn</fullName>
                <label>Door Opener Email/LinkedIn</label>
            </value>
            <value>
                <fullName>OCISO Attend an in-person meeting</fullName>
                <label>Attend an in-person meeting</label>
            </value>
            <value>
                <fullName>OCISO Attend a remote meeting (phone/Zoom)</fullName>
                <label>Attend a remote meeting (phone/Zoom)</label>
            </value>
            <value>
                <fullName>OCISO Account Email/documentation request</fullName>
                <label>Account Email/documentation request</label>
            </value>
            <value>
                <fullName>Warm Intro</fullName>
            </value>
            <value>
                <fullName>Concern Flag</fullName>
            </value>
            <value>
                <fullName>Constructive Nudge</fullName>
            </value>
            <value>
                <fullName>Thankful Reversion</fullName>
            </value>
            <value>
                <fullName>Ongoing Engagement</fullName>
            </value>
            <value>
                <fullName>One-Time Engagement</fullName>
            </value>
            <value>
                <fullName>EBR</fullName>
            </value>
            <value>
                <fullName>CISO Connect</fullName>
            </value>
            <value>
                <fullName>Network access</fullName>
            </value>
            <value>
                <fullName>Executive Sponsorship / EBRs</fullName>
            </value>
            <value>
                <fullName>Executive Selling / Discovery</fullName>
            </value>
            <value>
                <fullName>Statement of Direction / Road Map</fullName>
            </value>
            <value>
                <fullName>Partner  / Channel strategy</fullName>
            </value>
            <value>
                <fullName>Executive Selling / Success Criteria</fullName>
            </value>
            <value>
                <fullName>Post Sales Advisory</fullName>
            </value>
            <value>
                <fullName>Business Discovery</fullName>
            </value>
            <value>
                <fullName>Executive First</fullName>
            </value>
            <value>
                <fullName>Business Case</fullName>
            </value>
            <value>
                <fullName>OI Business Case</fullName>
            </value>
            <value>
                <fullName>Value Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>