objects/Account_Support_Request__c/fields/Meeting_Agenda__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Agenda__c</fullName>
    <label>Meeting Agenda</label>
    <type>TextArea</type>
</CustomField>