objects/Account_Support_Request__c/fields/Meeting_Call_or_Email_Objective__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Call_or_Email_Objective__c</fullName>
    <description>List top 2 – 3 meeting objectives. Be as specific, include any deadlines.
Renamed from Meeting/Call Objective → Goal of this meeting as part of SS-13320.</description>
    <inlineHelpText>List top 2 – 3 meeting objectives. Be as specific, include any deadlines.</inlineHelpText>
    <label>Goal of this meeting</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>