objects/Account_Support_Request__c/fields/Meeting_Duration__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Duration__c</fullName>
    <description>Meeting Duration</description>
    <inlineHelpText>Meeting Duration</inlineHelpText>
    <label>Meeting Duration (Hrs)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>