objects/Account_Support_Request__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <label>Meeting Presence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Outreach</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>