objects/Account_Support_Request__c/fields/Meeting_Type_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type_Picklist__c</fullName>
    <description>Meeting Type - used for TAM Record Type</description>
    <inlineHelpText>Meeting Type</inlineHelpText>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Training</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Technical Discovery</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>General Capabilities Discussion</fullName>
            </value>
            <value>
                <fullName>Other (please specify in “Additional Meeting Info”)</fullName>
            </value>
            <value>
                <fullName>Pilot Planning</fullName>
            </value>
            <value>
                <fullName>Technical Deep Dive (Modules, Use Cases)</fullName>
            </value>
            <value>
                <fullName>Demo (Threat Response)</fullName>
            </value>
            <value>
                <fullName>EDR Cadence Call (Monthly)</fullName>
            </value>
            <value>
                <fullName>Incidence Response Assistance</fullName>
            </value>
            <value>
                <fullName>Signals / Intel Discussion</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Install</fullName>
                <isActive>false</isActive>
                <label>Install</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>