objects/Account_Support_Request__c/fields/Missing_data_for_Endpoint_approval__c.field-meta.xml
<CustomField>
    <fullName>Missing_data_for_Endpoint_approval__c</fullName>
    <formula>IF(!ISBLANK(Timeline_to_cross_5_K_End_points__c),&quot;&quot;,&quot; Timeline to cross 5 K end points;&quot;)
&amp; IF(NumberOfEmployees__c &gt;0,&quot;&quot;,&quot; Employees;&quot;)
&amp; IF(Expected_growth_in_Employees__c  &gt;0,&quot;&quot;,&quot; Expected growth in Employees;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missing data for Endpoint approval</label>
    <type>Text</type>
</CustomField>