objects/Account_Support_Request__c/fields/Modules_Sold__c.field-meta.xml
<CustomField>
    <fullName>Modules_Sold__c</fullName>
    <formula>Account__r.Modules_Sold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modules Sold</label>
    <type>Text</type>
</CustomField>