objects/Account_Support_Request__c/fields/NARR_Next_12_Months__c.field-meta.xml
<CustomField>
    <fullName>NARR_Next_12_Months__c</fullName>
    <label>NARR Next 12 Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>