objects/Account_Support_Request__c/fields/Number_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attendees__c</fullName>
    <inlineHelpText>Number of Attendees - EDR request</inlineHelpText>
    <label>Number of Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>