objects/Account_Support_Request__c/fields/Number_of_training_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_training_Attendees__c</fullName>
    <description>Training ISR</description>
    <label>Number of training attendees</label>
    <length>10</length>
    <type>Text</type>
</CustomField>