objects/Account_Support_Request__c/fields/of_Technical_Writers_Needed__c.field-meta.xml
<CustomField>
    <fullName>of_Technical_Writers_Needed__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Provides Tanium-specific documentation. E.g. Playbooks.</inlineHelpText>
    <label># of Technical Writers Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>