objects/Account_Support_Request__c/fields/Onsite_Contact__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onsite Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Internal Support Requests (Onsite Contact)</relationshipLabel>
    <relationshipName>Internal_Support_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>