objects/Account_Support_Request__c/fields/Open_Opportunties_Current_FQ__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunties_Current_FQ__c</fullName>
    <label>Open Opportunties Current FQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>