objects/Account_Support_Request__c/fields/Opportunity_18_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_18_ID__c</fullName>
    <formula>Opportunity__r.Opportunity_18ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Opportunity 18 digit ID - Autofilled</inlineHelpText>
    <label>Opportunity 18 id</label>
    <type>Text</type>
</CustomField>