objects/Account_Support_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>11-22-2024 - Updated FLS to address issue in SS-9704</description>
    <inlineHelpText>Active opportunity this meeting will influence.</inlineHelpText>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Opportunity.End_User_Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Opportunity.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Internal Support Requests</relationshipLabel>
    <relationshipName>Executive_Engagement_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>