objects/Account_Support_Request__c/fields/Opportunity_NARR__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_NARR__c</fullName>
    <description>NARR of linked Opportunity</description>
    <formula>IF(

OR

(ISBLANK(Opportunity__c),

(Opportunity__r.NARR_Forecast__c=0)), 

(IF(Account__r.Tanium_Derived_EP_WF__c&lt;50000,Account__r.Tanium_Derived_EP_WF__c*20,

IF(Account__r.Tanium_Derived_EP_WF__c&lt;100000,Account__r.Tanium_Derived_EP_WF__c*15,

Account__r.Tanium_Derived_EP_WF__c*12))),

Opportunity__r.NARR_Forecast__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>NARR of linked Opportunity

With the launch of ARR on February 4, 2023, this field has been deprecated.</inlineHelpText>
    <label>DEPRECATED - Opportunity NACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>