objects/Account_Support_Request__c/fields/Opportunity_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Referenced in ISR Approval Process.</description>
    <label>Opportunity Owner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Internal_Support_RequestsRZy6</relationshipName>
    <type>Lookup</type>
</CustomField>