objects/Account_Support_Request__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <description>Current Stage of Opportunity</description>
    <formula>Text(Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current Stage of Opportunity</inlineHelpText>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>