objects/Account_Support_Request__c/fields/Opportunity_Stage_Duration__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage_Duration__c</fullName>
    <description>Ref: Added per Lori Taglieri&apos;s request for Tanium Executive Engagement ISR</description>
    <formula>Opportunity__r.Stage_Duration_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Stage Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>