objects/Account_Support_Request__c/fields/Other_Board_Members__c.field-meta.xml
<CustomField>
    <fullName>Other_Board_Members__c</fullName>
    <label>Other Board Members</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>